--- a/apps/dash-salesforce-crm/assets/s1.css
+++ b/apps/dash-salesforce-crm/assets/s1.css
@@ -138,31 +138,26 @@ table {
 
   #lead_grid {
     display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(9, 1fr);
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
     width: 90%;
     margin-left: auto;
     margin-right: auto;
   }
 
-  .control {
-    grid-column: span 2;
-    align-self: end;
-  }
-
   #new_lead {
-    grid-column: 12 / 13;
+    grid-column: 6 / 7;
     align-self: end
   }
 
   #leads_per_state {
-    grid-column: 1 / 5;
+    grid-column: 1 / 3;
     grid-row: 2 / 6;
   }
 
   #lead_grid > .indicators {
     grid-row: 2 / 3;
-    grid-column: 5 / 13;
+    grid-column: 3 / 7;
     display: flex;
   }
 
@@ -176,17 +171,17 @@ table {
 
   #leads_source_container {
     grid-row: 3 / 6;
-    grid-column: 5 / 9;
+    grid-column: 3 / 5;
   }
 
   #converted_leads_container {
     grid-row: 3 / 6;
-    grid-column: 9 / 13;
+    grid-column: 5 / 7;
   }
 
   #leads_table {
     grid-row: 6 / 10;
-    grid-column: 1 / 13;
+    grid-column: 1 / 7;
     max-height: 500px;
   }
 
@@ -195,37 +190,37 @@ table {
     margin-left: auto;
     margin-right: auto;
     display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(10, 1fr);
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
   }
 
   #new_opportunity {
-    grid-column: 12 / 13;
+    grid-column: 6 / 7;
     align-self: end;
   }
 
   #converted_count_container {
-    grid-column: 1 / 5;
+    grid-column: 1 / 3;
     grid-row: 2 / 7;
   }
 
   #opportunity_indicators {
-    grid-column: 5 / 13;
+    grid-column: 3 / 7;
     display: flex;
   }
 
   #opportunity_heatmap {
-    grid-column: 5 / 13;
+    grid-column: 3 / 7;
     grid-row: 3 / 7;
   }
 
   #top_open_container {
-    grid-column: 1 / 7;
+    grid-column: 1 / 4;
     grid-row: 7 / 11;
   }
 
   #top_lost_container {
-    grid-column: 7 / 13;
+    grid-column: 4 / 7;
     grid-row: 7 / 11;
   }
 
@@ -234,37 +229,37 @@ table {
     margin-left: auto;
     margin-right: auto;
     display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: 1fr auto 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
   }
 
   #new_case {
-    grid-column: 12 / 13;
+    grid-column: 6 / 7;
     align-self: end;
   }
 
   #cases_types_container {
-    grid-column: 1 / 5;
+    grid-column: 1 / 3;
     grid-row: 2 / 6;
   }
 
   #cases_indicators {
     display: flex;
-    grid-column: 5 / 13;
+    grid-column: 3 / 7;
   }
 
   #cases_reasons_container {
-    grid-column: 5 / 9;
+    grid-column: 3 / 5;
     grid-row: 3 / 6;
   }
 
   #cases_by_period_container {
-    grid-column: 9 / 13;
+    grid-column: 5 / 7;
     grid-row: 3 / 6;
   }
 
   #cases_by_account_container {
-    grid-column: 1 / 13;
+    grid-column: 1 / 7;
     grid-row: 6 / 9;
   }
 
