changed logo, header, font

--- a/apps/dash-salesforce-crm/assets/s1.css
+++ b/apps/dash-salesforce-crm/assets/s1.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: #f9f9f9;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'asap', serif;
   color: #506784;
   -webkit-user-select: none;
   /* Chrome all / Safari all */
