--- a/apps/dash-salesforce-crm/assets/s1.css
+++ b/apps/dash-salesforce-crm/assets/s1.css
@@ -137,6 +137,7 @@ table {
   }
 
   #lead_grid {
+    display: -ms-grid;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: auto;
@@ -146,17 +147,27 @@ table {
   }
 
   #new_lead {
+    -ms-grid-column: 6;
+    -ms-grid-column-span: 1;
     grid-column: 6 / 7;
     align-self: end
   }
 
   #leads_per_state {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
     grid-column: 1 / 3;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 2;
     grid-row: 2 / 6;
   }
 
   #lead_grid > .indicators {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
     grid-row: 2 / 3;
+    -ms-grid-column: 3;
+    -ms-grid-column-span: 4;
     grid-column: 3 / 7;
     display: flex;
   }
@@ -170,96 +181,150 @@ table {
   }
 
   #leads_source_container {
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 3;
     grid-row: 3 / 6;
+    -ms-grid-column: 3;
+    -ms-grid-column-span: 2;
     grid-column: 3 / 5;
   }
 
   #converted_leads_container {
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 3;
     grid-row: 3 / 6;
+    -ms-grid-column: 5;
+    -ms-grid-column-span: 2;
     grid-column: 5 / 7;
   }
 
   #leads_table {
+    -ms-grid-row: 6;
+    -ms-grid-row-span: 4;
     grid-row: 6 / 10;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 6;
     grid-column: 1 / 7;
     max-height: 500px;
   }
 
   #opportunity_grid {
+    display: -ms-grid;
+    display: grid;
     width: 90%;
     margin-left: auto;
     margin-right: auto;
-    display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: auto;
   }
 
   #new_opportunity {
+    -ms-grid-column: 6;
+    -ms-grid-column-span: 1;
     grid-column: 6 / 7;
     align-self: end;
   }
 
   #converted_count_container {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
     grid-column: 1 / 3;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 5;
     grid-row: 2 / 7;
   }
 
   #opportunity_indicators {
+    -ms-grid-column: 3;
+    -ms-grid-column-span: 4;
     grid-column: 3 / 7;
     display: flex;
   }
 
   #opportunity_heatmap {
+    -ms-grid-column: 3;
+    -ms-grid-column-span: 4;
     grid-column: 3 / 7;
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 4;
     grid-row: 3 / 7;
   }
 
   #top_open_container {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 3;
     grid-column: 1 / 4;
+    -ms-grid-row: 7;
+    -ms-grid-row-span: 4;
     grid-row: 7 / 11;
   }
 
   #top_lost_container {
+    -ms-grid-column: 4;
+    -ms-grid-column-span: 3;
     grid-column: 4 / 7;
+    -ms-grid-row: 7;
+    -ms-grid-row-span: 4;
     grid-row: 7 / 11;
   }
 
   #cases_grid {
+    display: -ms-grid;
+    display: grid;
     width: 90%;
     margin-left: auto;
     margin-right: auto;
-    display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: auto;
   }
 
   #new_case {
+    -ms-grid-column: 6;
+    -ms-grid-column-span: 1;
     grid-column: 6 / 7;
     align-self: end;
   }
 
   #cases_types_container {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
     grid-column: 1 / 3;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 4;
     grid-row: 2 / 6;
   }
 
   #cases_indicators {
-    display: flex;
+    -ms-grid-column: 3;
+    -ms-grid-column-span: 4;
     grid-column: 3 / 7;
+    display: flex;
   }
 
   #cases_reasons_container {
+    -ms-grid-column: 3;
+    -ms-grid-column-span: 2;
     grid-column: 3 / 5;
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 3;
     grid-row: 3 / 6;
   }
 
   #cases_by_period_container {
+    -ms-grid-column: 5;
+    -ms-grid-column-span: 2;
     grid-column: 5 / 7;
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 3;
     grid-row: 3 / 6;
   }
 
   #cases_by_account_container {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 6;
     grid-column: 1 / 7;
+    -ms-grid-row: 6;
+    -ms-grid-row-span: 3;
     grid-row: 6 / 9;
   }
 
