--- a/apps/dash-clinical-analytics/assets/clinical-analytics.css
+++ b/apps/dash-clinical-analytics/assets/clinical-analytics.css
@@ -72,8 +72,8 @@ H5, H3 {
 }
 
 .wait_time_graph > div, .patient_score_graph > div {
-    height: 100%;
-    width: 100%;
+    height: 100% !important;
+    width: 100% !important;
 }
 
 .draglayer {
