--- a/apps/dash-clinical-analytics/assets/clinical-analytics.css
+++ b/apps/dash-clinical-analytics/assets/clinical-analytics.css
@@ -57,11 +57,13 @@ H5, H3 {
     display: flex;
     flex-direction: column;
     align-items: center;
+    min-height: calc(100vh - 5.5rem);
 }
 
 #right-column {
     background-color: #f4f4f4;
     padding: 0rem 2rem;
+    min-height: calc(100vh - 5.5rem);
 }
 
 .table-row {
